# curl-impy

./: ._hook.txt  .gitignore  0  README.md  XWEB5.json  __init__.py  __main__.py  __version__.py  _add_missing_defs.py  _analyze_def.py  _build_all.bat  _build_all.py  _build_and_debug.bat  _build_and_test.bat  _build_dll.bat  _build_log.txt  _build_log2.txt  _build_log3.txt  _build_log4.txt  _build_log5.txt  _build_log6.txt  _build_out.txt  _build_output.txt  _build_result.txt  _build_test.bat  _build_test.txt  _check_boringssl.py  _check_compile_flags.py  _check_curl_err.py  _check_dll.py  _check_env.bat  _check_exports.py  _check_implib.py  _check_lib.bat  _check_link.py  _check_missing.py  _check_missing2.py  _check_missing_output.txt  _check_output.txt  _check_quic.py  (+87 more)
.github/workflows/: build.yml
.workbuddy/memory/: 2026-07-12.md  2026-07-13.md  MEMORY.md
ci/: build_unix.sh
ci/patches/: apply_h2_fingerprint_patch.py  apply_no_env_no_proxy.py  curl-impersonate-8.20.0.patch  impersonate.c  impersonate.h  impersonate_register.c  impersonate_register.h
cli/: doctor.py  pro.py
curl_cffi_reference/: aio.py  const.py  curl.py  utils.py
curl_impy/: __init__.py  __version__.py  _ffi.py  aio.py  const.py  core.py  curl.py  session.py  utils.py
curl_impy/cli/: doctor.py  output.py  pro.py  request.py  run.py
curl_impy/fingerprints/: Chrome144.json
curl_impy_tests/: deep_test.py  vs_cffi_test.py
output/: libcurl-impersonate.lib
output_x86/: libcurl-impersonate.lib
patches_new/: boringssl.patch  curl-suppress-connect-headers.patch  curl.patch  impersonate_register.c  ngtcp2.patch  xweb5_config.h  zlib.patch
requests/: session.py  utils.py  websockets.py
win_build/: _build_all.py  build_all.bat  build_boringssl.bat  build_brotli.bat  build_curl_dll.bat  build_curl_lib.bat  build_nghttp2.bat  build_nghttp3.bat  build_ngtcp2.bat  build_zlib.bat  build_zstd.bat  config.bat  detect_env.bat  fetch_lexiforest_patches.bat  find_vs.bat  fix_boringssl_msvc.py  fix_installed_opensslv.py  fix_merge_forward_decl.py  fix_ngtcp2_cmake.py  fix_vla.py  generate_def_file.py  libcurl-impersonate-chrome.def  patch_cmake_dll.py
win_build_full/: _build_all.py  add_stdcall_callbacks.py  fix_boringssl_msvc.py  fix_merge_forward_decl.py  patch_boringssl_def.py  patch_cmake_dll.py
(+55 files in other folders)
