[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curl-impy"
version = "0.1.0"
description = "Python binding for curl-impersonate-chrome with custom fingerprint support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["certifi"]
keywords = ["curl", "impersonate", "browser", "fingerprint", "tls", "ja3", "ja4"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
packages = ["curl_impy"]

[tool.setuptools.package-data]
curl_impy = [
    "libs/win_x64/*.dll",
    "libs/win_x86/*.dll",
    "libs/linux_x64/*.so",
    "libs/linux_x86/*.so",
    "libs/macos_universal/*.dylib",
    "fingerprints/*.json",
]
